--- a/assets/sass/layouts/_sidebar.scss
+++ b/assets/sass/layouts/_sidebar.scss
@@ -5,6 +5,11 @@
     justify-content: center;
     grid-gap: 2rem;
     padding: 5vh 2vw;
+    overflow-y: overlay;
+
+    @include device(laptop) {
+        --radius-nav-sidebar: 7.8rem;
+    }
 
     &__title {
         @extend %txt-center;
