--- a/assets/sass/pages/_error.scss
+++ b/assets/sass/pages/_error.scss
@@ -76,7 +76,7 @@
                 z-index: -1;
             }
             &::after {
-                content: '👇🏽\A GO BACK\A👆🏽';
+                content: '👇🏽\AHOME\A👆🏽';
                 white-space: pre-wrap;
                 font-size: 0.08em;
                 line-height: 1.5;
