--- a/assets/sass/base/_typo.scss
+++ b/assets/sass/base/_typo.scss
@@ -1,6 +1,9 @@
 html {
     font-size: 62.5%;
 
+    @include device(laptop) {
+        font-size: 56.25%;
+    }
     @include device(tab-land) {
         font-size: 56.25%;
     }
