--- a/assets/sass/layouts/_navigation.scss
+++ b/assets/sass/layouts/_navigation.scss
@@ -59,7 +59,7 @@
             border-radius: var(--radius-circle);
             transform: var(--translate) scale(0);
             transition: transform 0.5s $outSmooth;
-            z-index: 999;
+            z-index: var(--z-nav-tooltip);
         }
 
         &::after {
@@ -79,7 +79,7 @@
             transform: translate3d(-15%, -50%, 0);
             pointer-events: none;
             transition: 0.4s transform $outBack, 0.4s opacity ease;
-            z-index: 999;
+            z-index: var(--z-nav-tooltip);
         }
 
         &:hover,
@@ -114,20 +114,18 @@
     }
 
     @include device(tab-to-phoneland) {
-        margin: 0 auto;
         position: fixed;
-        left: 0;
-        right: 0;
-        bottom: 3%;
-        top: auto;
+        left: 50%;
+        top: 100%;
+        transform: translate(-50%, -110%);
         flex-direction: row;
         align-items: center;
         justify-content: center;
         width: 90%;
         height: max-content;
-        z-index: 2001;
         padding: 4.5vmin 5vw;
         box-shadow: 0px 0px 20px 0px var(--clr_recipeitem_right_bg);
+        z-index: var(--z-nav);
 
         &__links {
             grid-auto-flow: column;
@@ -153,6 +151,32 @@
             flex-direction: column;
             p {
                 display: none;
+            }
+        }
+    }
+
+    @include device(phone) {
+        padding: 1.2rem 5vw;
+        width: calc(100% - 4 * var(--padding-home));
+    }
+    @include device(phone-to-ant) {
+        padding: 3rem 5vw;
+    }
+
+    @include device(phone-ant) {
+        --svg_size: 3rem;
+        padding: 1.2rem 1.5rem;
+
+        .themetoggle {
+            --svg_size: 3rem;
+        }
+
+        &__link {
+            &::before {
+                --translate: translate(-50%, 6px);
+            }
+            &:nth-of-type(2)::before {
+                --translate: translate(-100%, 9px);
             }
         }
     }
