--- a/assets/sass/layouts/recipeitem/_tags.scss
+++ b/assets/sass/layouts/recipeitem/_tags.scss
@@ -22,6 +22,11 @@
         align-items: center;
         justify-content: flex-start;
 
+        @include device(tab) {
+            grid-gap: 2vmin;
+            padding: 3vw;
+        }
+
         @include device(phone-land) {
             grid-gap: 2vmin;
             padding: 3vmin;
